# rp-keyer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
schematics/rp-keyer/: rp-keyer1.kicad_pcb  rp-keyer1.kicad_pro  rp-keyer1.kicad_sch
scripts/: patch_uf2_family.py
src/: buttons.rs  buzzer.rs  cdc_serial_state.rs  keyer_task.rs  lib.rs  midi_interrupt.rs  paddle.rs  radio_key.rs  shared.rs  storage.rs  ui.rs  usb_emit_task.rs
