[package]
name = "rp-keyer"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sp5tls/rp-keyer"
authors = ["Michal Zabielski <zabielski.michal@gmail.com>"]
description = "RP2040/RP2350 firmware: USB CW interface + on-board iambic keyer driving radio + buzzer + OLED menu"
readme = "README.md"
publish = false

# --- Embassy / RP HAL --------------------------------------------------------

[dependencies]
embassy-executor = { version = "0.10.0", features = ["executor-thread", "executor-interrupt", "platform-cortex-m", "defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["generic-queue-8"] }
embassy-usb = { version = "0.6.0" }
embassy-usb-driver = "0.2"
embassy-rp = { version = "0.10.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "defmt"] }
embassy-futures = "0.1"

defmt = "1"
defmt-rtt = "1"
static_cell = "2.1.0"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1", features = ["print-defmt"] }

# Heap allocator — the keyer engine uses Vec/VecDeque internally
# (text_queue + transition log), so a global allocator is mandatory.
embedded-alloc = "0.6"

# embassy-rp PWM config takes a `fixed`-point divider — same crate
# version embassy-rp itself depends on.
fixed = "1"

# OLED + drawing
embedded-graphics = "0.8"
ssd1306 = "0.10"
embedded-hal = "1.0"
heapless = "0.8"

# Keyer engine + CW decoder — pulled from crates.io so this firmware
# repo is self-contained.
radio-utils-keyer = { version = "0.1.1", default-features = false }
radio-utils-cw-decoder = "0.1.1"

# Settings persistence in the on-board SPI flash. `sequential-storage`
# does wear-leveled writes with CRC; `postcard` gives us serde-based
# serialization of the keyer config (KeyerConfig owns String fields,
# hence the `alloc` feature on postcard).
sequential-storage = { version = "7", default-features = false, features = ["postcard", "alloc"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
embedded-storage-async = "0.4"

[features]
default = []

# Chip selection — mutually exclusive (different memory.x + target triple).
rp2040 = ["embassy-rp/rp2040"]
rp2350 = ["embassy-rp/rp235xa"]

# USB transport selection — mirror cw-adapter so existing clients
# (vail-adapter and friends) continue to work alongside the new
# on-board keyer / radio drive / OLED.
serial = []
midi = []

[[bin]]
name = "rp2040"
path = "src/bin/rp2040.rs"
required-features = ["rp2040"]

[[bin]]
name = "rp2350"
path = "src/bin/rp2350.rs"
required-features = ["rp2350"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2
overflow-checks = false

[profile.dev]
opt-level = "s"
debug = 2
overflow-checks = false
